<?xml version="1.0" encoding="utf-8"?>

<!--
    This file entails the layout of the Summaries page, which simply displays the results of the
        temperament quiz.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Summary"
        android:background="@color/grey"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/quiz_sum"
        android:textSize="17.5pt"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/temp"
        android:textSize="12pt"
        />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purp"
        android:padding="10dp"
        android:textSize="10pt"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/temp_des"
        android:textSize="12pt"
        />

    <TextView
        android:id="@+id/temp_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purp"
        android:padding="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/temp_scores"
        android:textSize="12pt"
        />

    <TextView
        android:id="@+id/ch_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/sa_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/me_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="8pt"
        />

    <TextView
        android:id="@+id/ph_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="8pt"
        />

    </LinearLayout>
</ScrollView>